--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "atom": "^1.4.1",
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "express": "^4.18.2",
+    "jotai": "^2.2.3",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
